--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
         <link rel="stylesheet" href="../restaurant/css/style.css">
     </head>
     <body>
-        <div>
-            
+        <div id="top">
+            <div>
+                <img src="/img/images/kare-top_01.png" alt="">
+                <img src="/img/images/ramen-top_01.png" alt="">
+                <img src="/img/images/hitsumabushi-top_01.png" alt="">
+            </div>
+        </div>
+        <div id="mid">
+
+        </div>
+        <div id="menu">
+
+        </div>
+        <div id="bot">
+    
         </div>
     </body>
 </html>
