--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     </head>
     <body>
         <div id="top">
+            <span class="title">
+                <img src="/img/images/title.png" alt="">
+            </span>
             <div class="image">
-                <img src="/img/images/kare-top_01.png" alt="">
-                <img src="/img/images/ramen-top_01.png" alt="">
-                <img src="/img/images/hitsumabushi-top_01.png" alt="">
+                <img class="kare-top" src="/img/images/kare-top_01.png" alt="">
+                <img class="ramen-top" src="/img/images/ramen-top_01.png" alt="">
+                <img class="mabushi-top" src="/img/images/hitsumabushi-top_01.png" alt="">
             </div>
         </div>
         <div id="mid">
