--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
                 <img src="/img/images/title.png" alt="">
             </span>
             <div class="image">
-                <img class="kare-top" src="/img/images/kare-top_01.png" alt="">
-                <img class="ramen-top" src="/img/images/ramen-top_01.png" alt="">
-                <img class="mabushi-top" src="/img/images/hitsumabushi-top_01.png" alt="">
+                <a class="kare-top" href="">
+                    <img src="/img/images/kare-top_01.png" alt="">
+                </a>
+                <a class="ramen-top" href="">
+                    <img src="/img/images/ramen-top_01.png" alt="">
+                </a>
+                <a class="mabushi-top" href="">
+                    <img src="/img/images/hitsumabushi-top_01.png" alt="">
+                </a>
             </div>
         </div>
         <div id="mid">
