--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="jp">
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>restaurant</title>
         <link rel="stylesheet" href="/css/style.css">
     </head>
-    <body>
+    <body id="bg">
         <div id="top">
-            <span class="title">
+            <div class="title">
                 <img src="/img/images/title.png" alt="">
-            </span>
+            </div>
             <div class="image">
-                <a class="kare-top" href="">
+                <a class="kare-top" href="/img/images/魚介カレー.jpg">
                     <img src="/img/images/kare-top_01.png" alt="">
                 </a>
-                <a class="ramen-top" href="">
+                <a class="ramen-top" href="/img/images/牛タンラーメン.jpg">
                     <img src="/img/images/ramen-top_01.png" alt="">
                 </a>
-                <a class="mabushi-top" href="">
+                <a class="mabushi-top" href="/img/images/ひつまぶし.jpg">
                     <img src="/img/images/hitsumabushi-top_01.png" alt="">
                 </a>
             </div>
