--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
             </div>
         </div>
         <div id="mid">
-
+            <div class="button">
+                <a href=".kare">
+                    <img src="/img/images/b-kare.png" alt="">
+                </a>
+                <a href=".ramen">
+                    <img src="/img/images/b-ramen.png" alt="">
+                </a>
+                <a href=".mabushi">
+                    <img src="/img/images/b-mabushi.png" alt="">
+                </a>
+            </div>
         </div>
         <div id="menu">
             <div class="kare">
