--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             </div>
         </div>
         <div id="mid">
+            <div>
+                <img src="/img/images/special-menu.png" alt="">
+            </div>
             <div class="button">
                 <a href=".kare">
                     <img src="/img/images/b-kare.png" alt="">
