--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div id="mid">
             <div>
-                <img src="/img/images/special-menu.png" alt="">
+                <img class="mid-title" src="/img/images/special-menu.png" alt="">
             </div>
             <div class="button">
                 <a href=".kare">
