--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             </div>
         </div>
         <div id="menu">
+            <div class="menu-title">
+                <img src="/img/images/title-kare.png" alt="">
+            </div>
             <div class="kare">
 
             </div>
@@ -52,7 +55,12 @@
             </div>
         </div>
         <div id="bot">
-    
+            <div class="ticket">
+
+            </div>
+            <div class="akses">
+                
+            </div>
         </div>
     </body>
 </html>
