--- a/index.html
+++ b/index.html
@@ -29,28 +29,30 @@
                 <img class="mid-title" src="/img/images/special-menu.png" alt="">
             </div>
             <div class="button">
-                <a href=".kare">
+                <a href="#kare">
                     <img src="/img/images/b-kare.png" alt="">
                 </a>
-                <a href=".ramen">
+                <a href="#ramen">
                     <img src="/img/images/b-ramen.png" alt="">
                 </a>
-                <a href=".mabushi">
+                <a href="#mabushi">
                     <img src="/img/images/b-mabushi.png" alt="">
                 </a>
             </div>
         </div>
         <div id="menu">
-            <div class="menu-title">
-                <img src="/img/images/title-kare.png" alt="">
-            </div>
-            <div class="kare">
+            <div id="kare">
+                <div class="kare-title">
+                    <img src="/img/images/title-kare.png" alt="">
+                </div>
+                <div>
 
+                </div>
             </div>
-            <div class="ramen">
+            <div id="ramen">
                 
             </div>
-            <div class="mabushi">
+            <div id="mabushi">
                 
             </div>
         </div>
