--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <div class="kare-title">
                     <img src="/img/images/title-kare.png" alt="">
                 </div>
-                <div>
-
+                <div class="kare-image">
+                    <img src="" alt="">
                 </div>
             </div>
             <div id="ramen">
