--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
                 </div>
             </div>
             <div id="ramen">
-                
+                <div class="ramen-title">
+                    <img src="/img/images/title-ramen.png" alt="">
+                </div>
+                <div class="ramen-image">
+                    <img src="" alt="">
+                </div>
             </div>
             <div id="mabushi">
                 
