--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
                 </div>
             </div>
             <div id="mabushi">
-                
+                <div class="mabushi-title">
+                    <img src="/img/images/title-mabushi.png" alt="">
+                </div>
+                <div class="mabushi-image">
+                    <img src="" alt="">
+                </div>
             </div>
         </div>
         <div id="bot">
