--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
                 <div class="kare-image">
                     <img src="" alt="">
                 </div>
+                <div class="kare-font">
+                    <p>エビ・あさり・イカが旨味たっぷりの魚介カレー。
+                        <br>
+                        ◎大盛り【350g：＋100円(税込)】
+                        <br>
+                        ・小盛り【150g：－50円(税込)】もできます。
+                        <br>
+                        ◎辛さが選べます。
+                        <br>
+                        ※期間限定メニューは、2022年11月
+                        <br>
+                        以降食材がなくなり次第終了とさせていただきます。
+                        </p>
+                </div>
             </div>
             <div id="ramen">
                 <div class="ramen-title">
