--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
             </div>
         </div>
         <div id="bot">
-            <div class="ticket">
-
+            <div class="kupon">
+                <a href="">
+                    <img src="/img/images/coupon.png" alt="">
+                </a>
             </div>
             <div class="akses">
                 
