--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
                 </a>
             </div>
             <div class="akses">
-                
+                <p>小田急線 世田谷代田駅 南口から徒歩3分。
+                    <br>
+                    ※駐車場がございませんため、車・バイクなどで来店がご遠慮ください。
+                    </p>
             </div>
         </div>
     </body>
