--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <br>
                         ・小盛り【150g：－50円(税込)】もできます。
                         <br>
+                        <br>
                         ◎辛さが選べます。
                         <br>
                         ※期間限定メニューは、2022年11月
@@ -70,6 +71,21 @@
                 <div class="ramen-image">
                     <img src="" alt="">
                 </div>
+                <div class="ramen-font">
+                    <p>日本全国に人気の厚切り牛たんラーメン。
+                        <br>
+                        ◎大盛り【350g：＋100円(税込)】
+                        <br>
+                        ・小盛り【150g：－50円(税込)】もできます。
+                        <br>
+                        <br>
+                        ◎辛さが選べます。
+                        <br>
+                        ※期間限定メニューは、2022年11月
+                        <br>
+                        以降食材がなくなり次第終了とさせていただきます
+                        </p>
+                </div>
             </div>
             <div id="mabushi">
                 <div class="mabushi-title">
@@ -77,6 +93,21 @@
                 </div>
                 <div class="mabushi-image">
                     <img src="" alt="">
+                </div>
+                <div class="mabushi-font">
+                    <p>強火の遠火で焼き上げる名古屋名物のひつまぶし。
+                        <br>
+                        ◎大盛り【350g：＋100円(税込)】
+                        <br>
+                        ・小盛り【150g：－50円(税込)】もできます。
+                        <br>
+                        <br>
+                        ◎辛さが選べます。
+                        <br>
+                        ※期間限定メニューは、2022年11月
+                        <br>
+                        以降食材がなくなり次第終了とさせていただきます。
+                        </p>
                 </div>
             </div>
         </div>
