--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <body id="bg">
         <div id="top">
             <div class="title">
-                <img src="/img/images/title.png" alt="">
+                <img src="../img/images/title.png" alt="">
             </div>
             <div class="image">
                 <a class="kare-top" href="/img/images/魚介カレー.jpg">
-                    <img src="/img/images/kare-top_01.png" alt="">
+                    <img src="../img/images/kare-top_01.png" alt="">
                 </a>
                 <a class="ramen-top" href="/img/images/牛タンラーメン.jpg">
-                    <img src="/img/images/ramen-top_01.png" alt="">
+                    <img src="../img/images/ramen-top_01.png" alt="">
                 </a>
                 <a class="mabushi-top" href="/img/images/ひつまぶし.jpg">
-                    <img src="/img/images/hitsumabushi-top_01.png" alt="">
+                    <img src="../img/images/hitsumabushi-top_01.png" alt="">
                 </a>
             </div>
         </div>
