--- a/index.html
+++ b/index.html
@@ -10,40 +10,40 @@
     <body id="bg">
         <div id="top">
             <div class="title">
-                <img src="../img/images/title.png" alt="">
+                <img src="../img/title.png" alt="">
             </div>
             <div class="image">
                 <a class="kare-top" href="/img/images/魚介カレー.jpg">
-                    <img src="../img/images/kare-top_01.png" alt="">
+                    <img src="../img/kare-top_01.png" alt="">
                 </a>
                 <a class="ramen-top" href="/img/images/牛タンラーメン.jpg">
-                    <img src="../img/images/ramen-top_01.png" alt="">
+                    <img src="../img/ramen-top_01.png" alt="">
                 </a>
                 <a class="mabushi-top" href="/img/images/ひつまぶし.jpg">
-                    <img src="../img/images/hitsumabushi-top_01.png" alt="">
+                    <img src="../img/hitsumabushi-top_01.png" alt="">
                 </a>
             </div>
         </div>
         <div id="mid">
             <div>
-                <img class="mid-title" src="/img/images/special-menu.png" alt="">
+                <img class="mid-title" src="../img/special-menu.png" alt="">
             </div>
             <div class="button">
                 <a href="#kare">
-                    <img src="/img/images/b-kare.png" alt="">
+                    <img src="../img/b-kare.png" alt="">
                 </a>
                 <a href="#ramen">
-                    <img src="/img/images/b-ramen.png" alt="">
+                    <img src="../img/b-ramen.png" alt="">
                 </a>
                 <a href="#mabushi">
-                    <img src="/img/images/b-mabushi.png" alt="">
+                    <img src="../img/b-mabushi.png" alt="">
                 </a>
             </div>
         </div>
         <div id="menu">
             <div id="kare">
                 <div class="kare-title">
-                    <img src="/img/images/title-kare.png" alt="">
+                    <img src="../img/title-kare.png" alt="">
                 </div>
                 <div class="kare-image">
                     <img src="" alt="">
@@ -66,7 +66,7 @@
             </div>
             <div id="ramen">
                 <div class="ramen-title">
-                    <img src="/img/images/title-ramen.png" alt="">
+                    <img src="../img/title-ramen.png" alt="">
                 </div>
                 <div class="ramen-image">
                     <img src="" alt="">
@@ -89,7 +89,7 @@
             </div>
             <div id="mabushi">
                 <div class="mabushi-title">
-                    <img src="/img/images/title-mabushi.png" alt="">
+                    <img src="../img/title-mabushi.png" alt="">
                 </div>
                 <div class="mabushi-image">
                     <img src="" alt="">
@@ -114,7 +114,7 @@
         <div id="bot">
             <div class="kupon">
                 <a href="">
-                    <img src="/img/images/coupon.png" alt="">
+                    <img src="../img/coupon.png" alt="">
                 </a>
             </div>
             <div class="akses">
