--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                 <img src="img/title.png" alt="">
             </div>
             <div class="image">
-                <a class="kare-top" href="/img/images/魚介カレー.jpg">
+                <a class="kare-top" href="img/images/魚介カレー.jpg">
                     <img src="img/kare-top_01.png" alt="">
                 </a>
-                <a class="ramen-top" href="/img/images/牛タンラーメン.jpg">
+                <a class="ramen-top" href="img/images/牛タンラーメン.jpg">
                     <img src="img/ramen-top_01.png" alt="">
                 </a>
-                <a class="mabushi-top" href="/img/images/ひつまぶし.jpg">
+                <a class="mabushi-top" href="img/images/ひつまぶし.jpg">
                     <img src="img/hitsumabushi-top_01.png" alt="">
                 </a>
             </div>
